--- a/data-science-curriculum-build-2/challenges/c08-islands-pt1-assignment.Rmd
+++ b/data-science-curriculum-build-2/challenges/c08-islands-pt1-assignment.Rmd
@@ -69,8 +69,8 @@ NB. When Zach counted the homes (on 2025-01-08), he found 20 unoccupied out of 5
   - 554 homes
 - What is the number of unoccupied homes? (*Hint*: This is not given anywhere. You will have to count them!)
   - 17 unoccupied homes
-- What percent of homes are *occupied*?
-  - 99.96% of the homes are currently occupied
+- What percent of homes are *occupied*? (REVISION)
+  - 96.93% of the homes are occupied
 - Are there any sources of *real* uncertainty in the percent occupied you calculated?
   - The only real uncertainty in this percent should come from the number of houses occupied and unoccupied changing
 - Are there any sources of *erroneous* uncertainty in the percent occupied you calculated?
