--- a/data-science-curriculum-build-2/challenges/c05-antibiotics-assignment.Rmd
+++ b/data-science-curriculum-build-2/challenges/c05-antibiotics-assignment.Rmd
@@ -76,15 +76,14 @@ For all five of the visuals, you must show information on *all 16 bacteria*. For
 In this visual you must show *all three* effectiveness values for *all 16 bacteria*. This means **it must be possible to identify each of the 16 bacteria by name.** You must also show whether or not each bacterium is Gram positive or negative.
 
 ```{r q1.1}
-
 df_antibiotics %>%
-  ggplot(aes(x = penicillin, y = streptomycin, size = neomycin, label = bacteria)) +
+  ggplot(aes(x = penicillin, y = streptomycin, size = neomycin, label = bacteria, color = gram)) +
   geom_point() +
+  scale_color_manual(values = c("#FC4E07", "#52854C")) +
   geom_text_repel(size = 3) +
   scale_x_log10() +
   scale_y_log10() +
   ggtitle("Comparing MIC of different drugs against different bacteria")
-
 ```
 
 #### Visual 2 (All variables)
@@ -98,17 +97,19 @@ Note that your visual must be *qualitatively different* from *all* of your other
 df_q12 <- df_antibiotics %>% 
   pivot_longer(cols = c(penicillin, streptomycin, neomycin),
                names_to = "antibiotic",
-               values_to = "mic")
+               values_to = "mic") %>% 
+  mutate(bacteria = fct_reorder(bacteria, mic))
+
 
 df_q12 %>% 
-  ggplot(aes(fill = antibiotic, y= mic, x=bacteria)) +
+  ggplot(aes(fill = antibiotic, y= mic, x=bacteria, alpha = gram)) +
+  scale_alpha_manual(values = c("positive" = 1, "negative" = 0.7)) +
   scale_y_log10() +
   geom_bar(position="dodge", stat="identity", width = 0.8) +
   theme(axis.text.x = element_text(angle = 45, hjust = 1)) +
   ggtitle("Comparing MIC values of different antibiotics against different bacteria")
   
-  
-  
+
 ```
 
 #### Visual 3 (Some variables)
@@ -119,7 +120,11 @@ Note that your visual must be *qualitatively different* from *all* of your other
 
 ```{r q1.3}
 
-df_antibiotics %>% 
+df_13 <- df_antibiotics %>% 
+  mutate(bacteria = fct_reorder(bacteria, penicillin))
+  
+
+df_13 %>% 
   ggplot(aes(x= bacteria, y = penicillin)) +
   geom_point() +
   theme(axis.text.x = element_text(angle = 45, hjust = 1)) +
@@ -144,8 +149,7 @@ df_long <- df_antibiotics %>%
 
 df_long %>% 
   ggplot(aes(x = antibiotic, y = mic, color = antibiotic)) + 
-  geom_boxplot() + 
-  facet_wrap(~antibiotic) + 
+  geom_boxplot() +
   scale_y_log10() +
   theme(legend.position = "none") + 
   labs(x = "Antibiotic", y = "MIC Values") +
@@ -160,12 +164,28 @@ In this visual you may show a *subset* of the variables (`penicillin`, `streptom
 Note that your visual must be *qualitatively different* from *all* of your other visuals.
 
 ```{r q1.5}
-df_antibiotics %>%
-  ggplot(aes(fill = bacteria, x = gram)) + 
-  geom_bar(position = "stack") +
-  geom_text(stat = "count", aes(label = bacteria), position = position_stack(vjust = 0.5), color = "white") +
-  labs(y = "Count", x = "Gram Type") +
-  ggtitle("Comparing the Gram Types of Different bacteria")
+
+df_q15 <- df_antibiotics %>% 
+  pivot_longer(
+    cols = c(penicillin, streptomycin, neomycin), # Columns to pivot
+    names_to = "antibiotic",
+    values_to = "mic" 
+  )
+
+df_q15 %>% 
+  ggplot(aes(x = antibiotic, y = bacteria)) +
+  geom_tile(aes(fill = mic), color = "white") +
+  scale_fill_gradient(
+    trans = 'log10',                             
+    low = "blue", high = "red"                   
+  ) +
+  labs(
+    title = "Heatmap of MIC Values Across Antibiotics",
+    x = "Antibiotic",
+    y = "Bacteria",
+    fill = "MIC Value"
+  )
+
 ```
 
 ### __q2__ Assess your visuals
@@ -183,6 +203,7 @@ There are **two questions** below; use your five visuals to help answer both Gui
 *Observations*
 - What is your response to the question above?
   - The most effective antibiotic appears to be neomycin
+  - Streptomycin seems to be the next most effective antibiotic, while penicilin seems to be the least effective of the three
 - Which of your visuals above (1 through 5) is **most effective** at helping to answer this question?
   - The most effective visual to answer this question was Visual 2. 
 - Why?
@@ -201,9 +222,10 @@ In 1974 *Diplococcus pneumoniae* was renamed *Streptococcus pneumoniae*, and in 
 - Which of your visuals above (1 through 5) is **most effective** at helping to answer this question?
   - Visual 5 was most effective in helping me answer this question
 - Why?
-  - The most common type of bacteria in this dataset that were gram positive were the Streptococcus bacteria
-  - the Diplococcus pneumoniae bacteria is also gram positive, which means it shares traits with Streptococcus bacteria, possibly contributing to its renaming
-
+  - The Diplococcus pneumoniae seems to have more similar traits to other streptococcus bacteria, as exhibited in visuals 2, 3, and 5
+  - Visual 2 shows that Diploccocus has very similar MIC values for the three types of bacteria as other streptococcus bacteria
+  - Visual 3 shows a similar relationship, this time just for penicilin
+  - Visual 5 shows that Diploccocus pneumoniae exhibits similar MIC values as other streptococus bacteria in the heatmap
 
 # References
 <!-- -------------------------------------------------- -->
