--- a/data-science-curriculum-build-2/challenges/c07-monte-carlo-assignment.Rmd
+++ b/data-science-curriculum-build-2/challenges/c07-monte-carlo-assignment.Rmd
@@ -113,8 +113,8 @@ Pick a sample size $n$ and generate $n$ points *uniform randomly* in the square 
 ## TASK: Choose a sample size and generate samples
 n <- 100
 df_q1 <- 
-  tibble(x = seq(-5, +5, length.out = 100)) %>% 
-  mutate(y = dunif(x, min = -1, max = +1))
+  tibble(x = runif(100, min = 0, max = 1)) %>% 
+  mutate(y = runif(100, min = 0, max = 1))
 ```
 
 Use the following to check that you've used the correct variable names. (NB. This does not check correctness.)
@@ -155,6 +155,9 @@ stat <- function(x, y) {
     return(0) 
     }
 }
+
+stat(1, 1)
+stat(0.5, 0.5)
 ```
 
 Implement your own assert statements. They should pass using your implementation of `stat()`, *but* they should also be *correct*.
@@ -185,11 +188,11 @@ print("Your assertions passed, but make sure they're checking the right thing!")
 *Observations*
 
 - You chose a correct value of `stat(x, y)` when `x, y` is *outside* the circle. Why did you choose this value?
-  - Since the radius of the circle is 1, we know that (0.5, 0.5) is inside the circle and thus is an element of Sc.
+  - I chose 0 as the indicator function for our approximation of pi must take 0 if the unform random variable does not land in the circle. 
   
   
 - You chose a correct value of `stat(x, y)` when `x, y` is *inside* the circle. Why did you choose this value?
-  -Since the radius of the circle is 1, we know that (1.5, 1.5) is outside the circle and thus not an element of Sc (but rather St).
+  - I chose 4 as we multiply the chance a uniform random variable lands in the circle by that amount to ensure that we are approximating for pi instead of pi/4. 
 
 
 ### __q3__ Estimate $\pi$
@@ -201,8 +204,10 @@ Using your data in `df_q1`, estimate $\pi$.
 df_q3 <- 
   df_q1 %>%
   # TODO: Estimate pi as the column `pi_est`
-  mutate(inside_circle = ifelse(x^2 + y^2 <= 1, 1, 0)) %>%
-  summarise(pi_est = 4 * mean(inside_circle))
+  rowwise() %>%               
+  mutate(value = stat(x, y)) %>%  
+  ungroup() %>%               
+  summarise(pi_est = mean(value))
 df_q3
 ```
 
@@ -262,7 +267,7 @@ df_q4 %>%
 *Observations*
 
 - What is a range of plausible values, based on the sampling distribution you've generated?
-  - A range of plausible values would be 0.4-1.1
+  - A range of plausible values would be 2.75-3.25
 
 ### __q5__ Bootstrap percentile confidence interval
 
@@ -272,15 +277,17 @@ Compute a bootstrap confidence interval for $\pi$ at the 95% confidence level (`
 
 ```{r}
 ## TASK: Compute a bootstrap confidence interval at the 95% level (alpha = 0.05)
+alpha = 0.05
 df_q5 <- 
   df_q4 %>% 
   summarize(
     # TODO: Compute pi_lo and pi_up
-    pi_lo = quantile(pi_est, 0.025),
-    pi_up = quantile(pi_est, 0.075),
+    pi_lo = quantile(pi_est, alpha/2),
+    pi_up = quantile(pi_est, 1-alpha/2),
   )
 
 df_q5
+
 ```
 
 ### __q6__ CLT confidence interval
@@ -292,10 +299,13 @@ Compute a CLT-based confidence interval for $\pi$ at the 95% confidence level (`
 *Hint 2*: You have computed the same thing (a 95% confidence interval) in both q5 and q6. If they disagree strongly, that suggests that you've done something *wrong* in one of the tasks....
 
 ```{r q6-task}
-df_q1 %>% 
+df_q1 %>%
+    rowwise() %>%                
+    mutate(value = stat(x, y)) %>%  
+    ungroup() %>%
     mutate(
-    sample_mean = mean(x),
-    sd_uniform = sqrt((1 - (-1))^2 / 12),  
+    sample_mean = mean(value),
+    sd_uniform = sd(value),  
     se = sd_uniform / sqrt(n),
     lo = sample_mean - 1.96 * se,  
     hi = sample_mean + 1.96 * se  
@@ -308,20 +318,21 @@ df_q1 %>%
 
 - Does your intervals include the true value of $\pi$?
   - (Bootstrap CI: yes or no?)
-  No
+  Yes
   - (CLT CI: yes or no?)
-  No
+  Yes
 - How closely do your bootstrap CI and CLT CI agree?
   - (Your answer here)
-  They do not seem drastically far from eachother, but I am unsure as I may have calculated incorrectly.
+  They are very similar
 - Comment on the width of your CI(s). Would your estimate of $\pi$ be good enough for roughly estimating an area (e.g., to buy enough paint for an art project)? Would your estimate of $\pi$ be good enough for precisely calculating a trajectory (e.g., sending a rocket into orbit)?
   - (Good enough as a rough estimate?)
-  As a *very* rough estimate it would suffice
+  This would suffice for a good rough estimate of pi
   - (Good enough as a precise estimate?)
-  This would not be sufficient for a precise estimate, it is very far from the true value of pi. 
+  This would not suffice for a precise estimate a the confidence interval is too high
 - What would be a *valid* way to make your CI more narrow?
   - (Your answer here)
-  I don't think I did the right steps to calculate pi using CI and CLT, so i'd appreciate feedback on where I went wrong. 
+  We could use a larger sampling size which would result in reduced margin of error (due to more data points), thus causing a narrower CI
+  
 
 # References
 <!-- -------------------------------------------------- -->
